# ABPlayer

./: .gitignore  CHANGELOG.md  README.md  index.html  mini-player.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/: App.svelte  MiniPlayer.svelte  mini-player.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json  mini-player.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/lib/: themes.ts  tierDefaults.ts  types.ts
src/lib/components/: AxisEditor.svelte  BatchActionBar.svelte  BookCard.svelte  BookEditDialog.svelte  BookListItem.svelte  BookRankingCard.svelte  ChapterList.svelte  CollectionManager.svelte  CollectionTag.svelte  EditableTierRow.svelte  EqualizerPanel.svelte  Library.svelte  LibraryToolbar.svelte  MiniCover.svelte  Modal.svelte  NewTierListDialog.svelte  Player.svelte  PlayerView.svelte  ResumeDialog.svelte  SettingsPanel.svelte  StatsPanel.svelte  StatusBadge.svelte  ThemeToggle.svelte  TierBadge.svelte  TierColorPicker.svelte  TierListSidebar.svelte  TiersView.svelte  Toast.svelte  UnrankedPool.svelte  ViewToggle.svelte  WaveformBar.svelte
src/lib/stores/: audioStore.ts  bookmarkStore.ts  libraryStore.ts  positionStore.ts  sleepTimerStore.ts  statisticsStore.ts  storeUtils.ts  tierListStore.ts  toastStore.ts  userdataStore.ts
src/lib/utils/: coverStorage.ts  focusOnMount.ts  format.ts  id.ts  metadata.ts  sort.ts
