[package]
name = "abplayer"
version = "1.1.2"
description = "Desktop Audiobook Player"
authors = ["jhidalgo_dev"]
edition = "2021"

[lib]
name = "abplayer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lofty = "0.22"
base64 = "0.22"
percent-encoding = "2"
log = "0.4"
tauri-plugin-window-state = "2.4.1"
tauri-plugin-global-shortcut = "2.3.1"
tauri-plugin-shell = "2"
